overlap issue resolve

--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 550px;
+    height: 650px;
     z-index: -1;
     opacity: 0.2;
 }
